# CodeSnippet

./: .gitignore  analyze_app_maps.ps1  analyze_app_shared_file_usage.ps1  analyze_process_list_shared_files.ps1  compare_so_snapshots.ps1
linux/emptyso/: build_and_run.sh  empty.c  measure_dlopen.c
linux/mmkv_analyzer/: README.md  mmkv_analyzer.py
oh/digso/: README.md  analyze_app_maps.ps1  analyze_app_shared_file_usage.ps1  analyze_process_list_shared_files.ps1  compare_so_snapshots.ps1  digso.py  list_zero_delta_filepss.ps1  run_analyze_app_maps.bat  run_analyze_app_shared_file_usage.bat  run_analyze_process_list_shared_files.bat  run_compare_so_snapshots.bat  run_list_zero_delta_filepss.bat
oh/harmonyos_skill_builder/: README.md  pyproject.toml
oh/harmonyos_skill_builder/harmonyos_skill_builder/: __init__.py  cli.py
oh/import/: README.md  build-profile.json5  oh-package.json5
oh/import/AppScope/: app.json5
oh/import/entry/: obfuscation-rules.txt  oh-package-lock.json5  oh-package.json5
oh/import/entry/src/main/: module.json5
oh/import/entry/src/main/cpp/: CMakeLists.txt  napi_init.cpp
oh/import/entry/src/main/cpp/types/libdlopen/: index.d.ts
oh/import/entry/src/main/ets/entryability/: EntryAbility.ts
oh/import/entry/src/main/ets/pages/: Index.ets
oh/import/entry/src/main/resources/base/element/: color.json  string.json
